--- a/anniversary.html
+++ b/anniversary.html
@@ -27,7 +27,7 @@
 					<div class="content">
 						<h1>Troyee</h1>
 						<h2>Welcome to Our<br />
-						first meet page.</h2>
+						Anniversary page.</h2>
 						<a href="" class="button big alt"><span>Click To Explore</span></a>
 					</div>
 					<a href="second-page.html" class="button hidden"><span>Let's Go</span></a>
@@ -42,59 +42,59 @@
 						<!-- Column 1 (horizontal, vertical, horizontal, vertical) -->
 						
 						<div class="image fit">
-							<a href="anniversary/pic1.jpg" data-lightbox="Troyee" data-title="caption">
+							<a href="anniversary/pic1.jpg" data-lightbox="Troyee" data-title="love you">
 								<img src="anniversary/pic1.jpg" >
 							</a>
 							</div>
-							<div class="image fit"> <a href="anniversary/pic4.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="anniversary/pic4.jpg" data-lightbox="Troyee" data-title="love you">
 								<img src="anniversary/pic4.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="anniversary/pic12.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="anniversary/pic12.jpg" data-lightbox="Troyee" data-title="love you">
 								<img src="anniversary/pic12.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="anniversary/pic11.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="anniversary/pic11.jpg" data-lightbox="Troyee" data-title="love you">
 								<img src="anniversary/pic11.jpg" ></a>
 							</div>
 							
 						<!-- Column 2 (vertical, horizontal, vertical, horizontal) -->
-							<div class="image fit"> <a href="anniversary/pic9.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="anniversary/pic9.jpg" data-lightbox="Troyee" data-title="love you">
 								<img src="anniversary/pic9.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="anniversary/pic6.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="anniversary/pic6.jpg" data-lightbox="Troyee" data-title="love you">
 								<img src="anniversary/pic6.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="anniversary/pic7.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="anniversary/pic7.jpg" data-lightbox="Troyee" data-title="love you">
 						<img src="anniversary/pic7.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="anniversary/pic8.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="anniversary/pic8.jpg" data-lightbox="Troyee" data-title="love you">
 						<img src="anniversary/pic8.jpg" ></a>
 							</div>
 
 						<!-- Column 3 (horizontal, vertical, horizontal, vertical) -->
-							<div class="image fit"> <a href="anniversary/pic14.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="anniversary/pic14.jpg" data-lightbox="Troyee" data-title="love you">
 							<img src="anniversary/pic14.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="anniversary/pic2.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="anniversary/pic2.jpg" data-lightbox="Troyee" data-title="love you">
 							<img src="anniversary/pic2.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="anniversary/pic15.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="anniversary/pic15.jpg" data-lightbox="Troyee" data-title="love you">
 								<img src="anniversary/pic15.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="anniversary/pic3.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="anniversary/pic3.jpg" data-lightbox="Troyee" data-title="love you">
 								<img src="anniversary/pic3.jpg" ></a>
 							</div>
 
 						<!-- Column 4 (vertical, horizontal, vertical, horizontal) -->
-							<div class="image fit"> <a href="anniversary/pic13.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="anniversary/pic13.jpg" data-lightbox="Troyee" data-title="love you">
 								<a href=""><img src="anniversary/pic13.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="anniversary/pic10.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="anniversary/pic10.jpg" data-lightbox="Troyee" data-title="love you">
 						<img src="anniversary/pic10.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="anniversary/pic5.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="anniversary/pic5.jpg" data-lightbox="Troyee" data-title="love you">
 								<img src="anniversary/pic5.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="anniversary/pic16.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="anniversary/pic16.jpg" data-lightbox="Troyee" data-title="love you">
 								<img src="anniversary/pic16.jpg" ></a>
 							</div>
 
@@ -124,6 +124,6 @@
 			<script src="fm-web/assets/js/main.js"></script>
 			<script src="js/lightbox-plus-jquery.js"></script>
 			<!-- <script src="assets/js/lightbox.js"></script> -->
-
+<script>setTimeout(()=>{alert('click to get full screen')}, 3000);</script>
 	</body>
 </html>
