--- a/college.html
+++ b/college.html
@@ -27,7 +27,7 @@
 					<div class="content">
 						<h1>Troyee</h1>
 						<h2>Welcome to Our<br />
-						first meet page.</h2>
+						College memories page.</h2>
 						<a href="#" class="button big alt"><span>Click To Explore</span></a>
 					</div>
 					<a href="#" class="button hidden"><span>Let's Go</span></a>
@@ -42,59 +42,59 @@
 						<!-- Column 1 (horizontal, vertical, horizontal, vertical) -->
 						
 						<div class="image fit">
-							<a href="college/pic1.jpg" data-lightbox="Troyee" data-title="caption">
+							<a href="college/pic1.jpg" data-lightbox="Troyee" data-title="love you">
 								<img src="college/pic1.jpg" >
 							</a>
 							</div>
-							<div class="image fit"> <a href="college/pic4.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="college/pic4.jpg" data-lightbox="Troyee" data-title="love you">
 								<img src="college/pic4.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="college/pic12.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="college/pic12.jpg" data-lightbox="Troyee" data-title="love you">
 								<img src="college/pic12.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="college/pic11.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="college/pic11.jpg" data-lightbox="Troyee" data-title="love you">
 								<img src="college/pic11.jpg" ></a>
 							</div>
 							
 						<!-- Column 2 (vertical, horizontal, vertical, horizontal) -->
-							<div class="image fit"> <a href="college/pic9.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="college/pic9.jpg" data-lightbox="Troyee" data-title="love you">
 								<img src="college/pic9.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="college/pic6.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="college/pic6.jpg" data-lightbox="Troyee" data-title="love you">
 								<img src="college/pic6.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="college/pic7.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="college/pic7.jpg" data-lightbox="Troyee" data-title="love you">
 						<img src="college/pic7.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="college/pic8.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="college/pic8.jpg" data-lightbox="Troyee" data-title="love you">
 						<img src="college/pic8.jpg" ></a>
 							</div>
 
 						<!-- Column 3 (horizontal, vertical, horizontal, vertical) -->
-							<div class="image fit"> <a href="college/pic14.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="college/pic14.jpg" data-lightbox="Troyee" data-title="love you">
 							<img src="college/pic14.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="college/pic2.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="college/pic2.jpg" data-lightbox="Troyee" data-title="love you">
 							<img src="college/pic2.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="college/pic15.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="college/pic15.jpg" data-lightbox="Troyee" data-title="love you">
 								<img src="college/pic15.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="college/pic3.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="college/pic3.jpg" data-lightbox="Troyee" data-title="love you">
 								<img src="college/pic3.jpg" ></a>
 							</div>
 
 						<!-- Column 4 (vertical, horizontal, vertical, horizontal) -->
-							<div class="image fit"> <a href="college/pic13.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="college/pic13.jpg" data-lightbox="Troyee" data-title="love you">
 								<a href=""><img src="college/pic13.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="college/pic14.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="college/pic14.jpg" data-lightbox="Troyee" data-title="love you">
 						<img src="college/pic14.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="college/pic5.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="college/pic5.jpg" data-lightbox="Troyee" data-title="love you">
 								<img src="college/pic5.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="college/pic16.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="college/pic16.jpg" data-lightbox="Troyee" data-title="love you">
 								<img src="college/pic16.jpg" ></a>
 							</div>
 
