--- a/dates.html
+++ b/dates.html
@@ -27,7 +27,7 @@
 					<div class="content">
 						<h1>Troyee</h1>
 						<h2>Welcome to Our<br />
-						first meet page.</h2>
+						Dates page.</h2>
 						<a href="#" class="button big alt"><span>Click To Explore</span></a>
 					</div>
 					<a href="#" class="button hidden"><span>Let's Go</span></a>
@@ -42,68 +42,68 @@
 						<!-- Column 1 (horizontal, vertical, horizontal, vertical) -->
 						
 						<div class="image fit">
-							<a href="dates\pic19.jpg" data-lightbox="Troyee" data-title="caption">
+							<a href="dates\pic19.jpg" data-lightbox="Troyee" data-title="Kacchi bhai">
 								<img src="dates\pic19.jpg" >
 							</a>
 							</div>
-							<div class="image fit"> <a href="dates\pic4.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="dates\pic4.jpg" data-lightbox="Troyee" data-title="TSC">
 								<img src="dates\pic4.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="dates\pic12.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="dates\pic12.jpg" data-lightbox="Troyee" data-title="Khana's ">
 								<img src="dates\pic12.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="dates\pic11.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="dates\pic11.jpg" data-lightbox="Troyee" data-title="Khana's ">
 								<img src="dates\pic11.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="dates\pic13.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="dates\pic13.jpg" data-lightbox="Troyee" data-title="Kudos">
 								<a href=""><img src="dates\pic13.jpg" ></a>
 							</div>
 						<!-- Column 2 (vertical, horizontal, vertical, horizontal) -->
-							<div class="image fit"> <a href="dates\pic9.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="dates\pic9.jpg" data-lightbox="Troyee" data-title="BurgerLogy on your 2022 Birthday">
 								<img src="dates\pic9.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="dates\pic6.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="dates\pic6.jpg" data-lightbox="Troyee" data-title="Khana's">
 								<img src="dates\pic6.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="dates\pic7.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="dates\pic7.jpg" data-lightbox="Troyee" data-title="Khana's">
 						<img src="dates\pic7.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="dates\pic8.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="dates\pic8.jpg" data-lightbox="Troyee" data-title="Chillox">
 						<img src="dates\pic8.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="dates\pic17.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="dates\pic17.jpg" data-lightbox="Troyee" data-title="Khana's">
 								<a href=""><img src="dates\pic17.jpg" ></a>
 							</div>
 						<!-- Column 3 (horizontal, vertical, horizontal, vertical) -->
-							<div class="image fit"> <a href="dates\pic14.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="dates\pic14.jpg" data-lightbox="Troyee" data-title="Kudos">
 							<img src="dates\pic14.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="dates\pic2.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="dates\pic2.jpg" data-lightbox="Troyee" data-title="Hot Plate">
 							<img src="dates\pic2.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="dates\pic15.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="dates\pic15.jpg" data-lightbox="Troyee" data-title="Kudos">
 								<img src="dates\pic15.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="dates\pic3.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="dates\pic3.jpg" data-lightbox="Troyee" data-title="Hot Plate">
 								<img src="dates\pic3.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="dates\pic18.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="dates\pic18.jpg" data-lightbox="Troyee" data-title="Khana's">
 								<a href=""><img src="dates\pic18.jpg" ></a>
 							</div>
 						<!-- Column 4 (vertical, horizontal, vertical, horizontal) -->
-						<div class="image fit"> <a href="dates\pic1.jpg" data-lightbox="Troyee" data-title="caption">
+						<div class="image fit"> <a href="dates\pic1.jpg" data-lightbox="Troyee" data-title="Popayes">
 							<a href=""><img src="dates\pic1.jpg" ></a>
 						</div>
-						<div class="image fit"> <a href="dates\pic20.jpg" data-lightbox="Troyee" data-title="caption">
+						<div class="image fit"> <a href="dates\pic20.jpg" data-lightbox="Troyee" data-title="Chillox">
 								<a href=""><img src="dates\pic20.jpg" ></a>
 							</div>
 							<div class="image fit"> <a href="dates\pic14.jpg" data-lightbox="Troyee" data-title="caption">
 						<img src="dates\pic14.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="dates\pic5.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="dates\pic5.jpg" data-lightbox="Troyee" data-title="BFC">
 								<img src="dates\pic5.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="dates\pic16.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="dates\pic16.jpg" data-lightbox="Troyee" data-title="Kudos">
 								<img src="dates\pic16.jpg" ></a>
 							</div>
 
@@ -133,6 +133,6 @@
 			<script src="fm-web/assets/js/main.js"></script>
 			<script src="js/lightbox-plus-jquery.js"></script>
 			<!-- <script src="assets/js/lightbox.js"></script> -->
-
+<!-- <script>setTimeout(()=>{alert('click to get full screen')}, 3000);</script> -->
 	</body>
 </html>
