--- a/index.html
+++ b/index.html
@@ -356,7 +356,8 @@
     <div class="bday-popup" id="bday-popup">
       <div class="book">
         <p>Hello Love I created this website for you.
-          carefully explore everything I implanted
+          carefully explore everything.
+          there is special ending at the end,click that after everything
         </p><button onclick="closePopup()">close</button>
         <div class="cover">
             <p>Click me</p>
