--- a/laxibazar.html
+++ b/laxibazar.html
@@ -61,10 +61,10 @@
 							<div class="image fit"> <a href="laxmibazar/pic9.jpg" data-lightbox="Troyee" data-title="Tea+Sunset">
 								<img src="laxmibazar/pic9.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="laxmibazar/pic6.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="laxmibazar/pic6.jpg" data-lightbox="Troyee" data-title="love you">
 								<img src="laxmibazar/pic6.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="laxmibazar/pic7.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="laxmibazar/pic7.jpg" data-lightbox="Troyee" data-title="love you">
 						<img src="laxmibazar/pic7.jpg" ></a>
 							</div>
 							<div class="image fit"> <a href="laxmibazar/pic8.jpg" data-lightbox="Troyee" data-title="Eh koto Filter martam">
@@ -75,10 +75,10 @@
 							<div class="image fit"> <a href="laxmibazar/pic10.jpg" data-lightbox="Troyee" data-title="Our asthetic Pic on our first Boat ride">
 							<img src="laxmibazar/pic10.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="laxmibazar/pic2.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="laxmibazar/pic2.jpg" data-lightbox="Troyee" data-title="love you">
 							<img src="laxmibazar/pic2.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="laxmibazar/pic15.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="laxmibazar/pic15.jpg" data-lightbox="Troyee" data-title="love you">
 								<img src="laxmibazar/pic15.jpg" ></a>
 							</div>
 							<div class="image fit"> <a href="laxmibazar/pic3.jpg" data-lightbox="Troyee" data-title="Ei selfie tular age maybe jhogra hoisilo">
@@ -89,7 +89,7 @@
 							<div class="image fit"> <a href="laxmibazar/pic13.jpg" data-lightbox="Troyee" data-title="Yee! noukay uthsii">
 								<img src="laxmibazar/pic13.jpg" ></a>
 							</div>
-							<div class="image fit"> <a href="laxmibazar/pic14.jpg" data-lightbox="Troyee" data-title="caption">
+							<div class="image fit"> <a href="laxmibazar/pic14.jpg" data-lightbox="Troyee" data-title="love you">
 						<img src="laxmibazar/pic14.jpg" ></a>
 							</div>
 							<div class="image fit"> <a href="laxmibazar/pic5.jpg" data-lightbox="Troyee" data-title="This Picture has a special place on our heart">
@@ -125,6 +125,7 @@
 			<script src="fm-web/assets/js/main.js"></script>
 			<script src="js/lightbox-plus-jquery.js"></script>
 			<!-- <script src="assets/js/lightbox.js"></script> -->
+			<Script></Script>
 
 	</body>
 </html>
