--- a/only-troyee.html
+++ b/only-troyee.html
@@ -35,58 +35,58 @@
 
 						<!-- Column 1 (horizontal, vertical, horizontal, vertical) -->
 							<div class="image fit">
-								<a href="onlyTroyee\ont1.jpg" data-lightbox="Troyee" data-title="caption"><img src="onlyTroyee\ont1.jpg" ></a>
+								<a href="onlyTroyee\ont1.jpg" data-lightbox="Troyee" data-title="woww!!!"><img src="onlyTroyee\ont1.jpg" ></a>
 							</div>
 							<div class="image fit">
-								<a href="onlyTroyee\ont2.jpg" data-lightbox="Troyee" data-title="caption"><img src="onlyTroyee\ont2.jpg" ></a>
+								<a href="onlyTroyee\ont2.jpg" data-lightbox="Troyee" data-title="woww!!!"><img src="onlyTroyee\ont2.jpg" ></a>
 							</div>
 							<div class="image fit">
-								<a href="onlyTroyee\ont3.jpg" data-lightbox="Troyee" data-title="caption"><img src="onlyTroyee\ont3.jpg" ></a>
+								<a href="onlyTroyee\ont3.jpg" data-lightbox="Troyee" data-title="woww!!!"><img src="onlyTroyee\ont3.jpg" ></a>
 							</div>
 							<div class="image fit">
-								<a href="onlyTroyee\ont4.jpg" data-lightbox="Troyee" data-title="caption"><img src="onlyTroyee\ont4.jpg" ></a>
+								<a href="onlyTroyee\ont4.jpg" data-lightbox="Troyee" data-title="woww!!!"><img src="onlyTroyee\ont4.jpg" ></a>
 							</div>
 
 						<!-- Column 2 (vertical, horizontal, vertical, horizontal) -->
 							<div class="image fit">
-								<a href="onlyTroyee\ont5.jpg" data-lightbox="Troyee" data-title="caption"><img src="onlyTroyee\ont5.jpg" ></a>
+								<a href="onlyTroyee\ont5.jpg" data-lightbox="Troyee" data-title="woww!!!"><img src="onlyTroyee\ont5.jpg" ></a>
 							</div>
 							<div class="image fit">
-								<a href="onlyTroyee\ont6.jpg" data-lightbox="Troyee" data-title="caption"><img src="onlyTroyee\ont6.jpg" ></a>
+								<a href="onlyTroyee\ont6.jpg" data-lightbox="Troyee" data-title="woww!!!"><img src="onlyTroyee\ont6.jpg" ></a>
 							</div>
 							<div class="image fit">
-								<a href="onlyTroyee\ont7.jpg" data-lightbox="Troyee" data-title="caption"><img src="onlyTroyee\ont7.jpg" ></a>
+								<a href="onlyTroyee\ont7.jpg" data-lightbox="Troyee" data-title="woww!!!"><img src="onlyTroyee\ont7.jpg" ></a>
 							</div>
 							<div class="image fit">
-								<a href="onlyTroyee\ont8.jpg" data-lightbox="Troyee" data-title="caption"><img src="onlyTroyee\ont8.jpg" ></a>
+								<a href="onlyTroyee\ont8.jpg" data-lightbox="Troyee" data-title="woww!!!"><img src="onlyTroyee\ont8.jpg" ></a>
 							</div>
 
 						<!-- Column 3 (horizontal, vertical, horizontal, vertical) -->
 							<div class="image fit">
-								<a href="onlyTroyee\ont9.jpg" data-lightbox="Troyee" data-title="caption"><img src="onlyTroyee\ont9.jpg" ></a>
+								<a href="onlyTroyee\ont9.jpg" data-lightbox="Troyee" data-title="woww!!!"><img src="onlyTroyee\ont9.jpg" ></a>
 							</div>
 							<div class="image fit">
-								<a href="onlyTroyee\ont10.jpg" data-lightbox="Troyee" data-title="caption"><img src="onlyTroyee\ont10.jpg" ></a>
+								<a href="onlyTroyee\ont10.jpg" data-lightbox="Troyee" data-title="woww!!!"><img src="onlyTroyee\ont10.jpg" ></a>
 							</div>
 							<div class="image fit">
-								<a href="onlyTroyee\ont11.jpg" data-lightbox="Troyee" data-title="caption"><img src="onlyTroyee\ont11.jpg" ></a>
+								<a href="onlyTroyee\ont11.jpg" data-lightbox="Troyee" data-title="woww!!!"><img src="onlyTroyee\ont11.jpg" ></a>
 							</div>
 							<div class="image fit">
-								<a href="onlyTroyee\ont12.jpg" data-lightbox="Troyee" data-title="caption"><img src="onlyTroyee\ont12.jpg" ></a>
+								<a href="onlyTroyee\ont12.jpg" data-lightbox="Troyee" data-title="woww!!!"><img src="onlyTroyee\ont12.jpg" ></a>
 							</div>
 
 						<!-- Column 4 (vertical, horizontal, vertical, horizontal) -->
 							<div class="image fit">
-								<a href="onlyTroyee\ont13.jpg" data-lightbox="Troyee" data-title="caption"><img src="onlyTroyee\ont13.jpg" ></a>
+								<a href="onlyTroyee\ont13.jpg" data-lightbox="Troyee" data-title="woww!!!"><img src="onlyTroyee\ont13.jpg" ></a>
 							</div>
 							<div class="image fit">
-								<a href="onlyTroyee\ont14.jpg" data-lightbox="Troyee" data-title="caption"><img src="onlyTroyee\ont14.jpg" ></a>
+								<a href="onlyTroyee\ont14.jpg" data-lightbox="Troyee" data-title="woww!!!"><img src="onlyTroyee\ont14.jpg" ></a>
 							</div>
 							<div class="image fit">
-								<a href="onlyTroyee\ont15.jpg" data-lightbox="Troyee" data-title="caption"><img src="onlyTroyee\ont15.jpg" ></a>
+								<a href="onlyTroyee\ont15.jpg" data-lightbox="Troyee" data-title="woww!!!"><img src="onlyTroyee\ont15.jpg" ></a>
 							</div>
 							<div class="image fit">
-								<a href="onlyTroyee\ont16.jpg" data-lightbox="Troyee" data-title="caption"><img src="onlyTroyee\ont16.jpg" ></a>
+								<a href="onlyTroyee\ont16.jpg" data-lightbox="Troyee" data-title="woww!!!"><img src="onlyTroyee\ont16.jpg" ></a>
 							</div>
 
 					</div>
