--- a/second-page.html
+++ b/second-page.html
@@ -210,8 +210,8 @@
 										<img src="college/pic4.jpg" alt="" />
 										<h3>College Memories</h3>
 									</a>
-									<a href="">
-										<img src=""  />
+									<a href="ending.html">
+										<img src="https://images.rawpixel.com/image_png_800/cHJpdmF0ZS9sci9pbWFnZXMvd2Vic2l0ZS8yMDIyLTA2L3JtNTM1YmF0Y2gyLXF1ZXN0aW9uLTAxLnBuZw.png"  />
 										<h3>Special Ending</h3>
 									</a>
 								</div>
