--- a/first-meet.html
+++ b/first-meet.html
@@ -125,6 +125,6 @@
 			<script src="fm-web/assets/js/main.js"></script>
 			<script src="js/lightbox-plus-jquery.js"></script>
 			<!-- <script src="assets/js/lightbox.js"></script> -->
-
+<script>setTimeout(()=>{alert('click to get full screen')}, 3000);</script>
 	</body>
 </html>
